@@ -154,6 +154,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Pike                   Rick E.
 - Pixel Bender           Richard Olsson
 - PL/SQL                 Victor Engmark
+- PostgreSQL             Christophe Chauvet
 - POV-Ray                Carl Fürstenberg
 - PowerBuilder           Doug Porter
 - PowerShell             Frode Aarebrot
